# tg-parser

./: .dockerignore  .env.example  .gitignore  Dockerfile  collector-entrypoint.sh  docker-compose.yml  main.py  pyproject.toml  run-collector.sh
tests/: test_cli.py  test_collector.py  test_models.py  test_search.py  test_storage.py
tg_scraper/: __init__.py  cli.py  client.py  collector.py  config.py  models.py  search.py  storage.py
webapp/: __init__.py  main.py
webapp/static/: style.css
webapp/templates/: index.html
